--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -47,14 +47,6 @@ small:80% -> 12.8px / 0.8rem
 
 
 
-// -webkit-text-security: disc;
-
-// -moz-text-security: disc;
-
-// text-security: disc;
-
-
-
 
 html, body{
  height: 100%;
@@ -281,7 +273,7 @@ off-canvas
 }
 
 @media only screen and #{breakpoint(small down)} { 
-	.off-canvas-content,
+  .off-canvas-content,
   .#{$maincontent-class}{
     box-shadow: 0 0 10px rgba($black, 0.5);
   } 
@@ -368,13 +360,6 @@ button{
   margin-top: 1rem;
 }
 
-/* 
-.manage-call-btn {
-  @extend .pard-btn;
-  cursor: pointer;
-  padding: 0.25rem 0.75rem;
-} */
-
 
 .create-artist-btn-popup, .create-space-btn-popup{
     border: 2px solid $grey-2;
@@ -394,14 +379,6 @@ button{
       background-color: $grey-1;
     }
 
-/* create-artist-btn-popup{
-    padding: 0.5rem 0rem;
-}
-
-.create-space-btn-popup{
-  padding: 0.5rem 0rem;
-} */
-
 .create-profile-btn-text{
   margin-left:$inner-spacing;
   font-weight: bold;
@@ -412,7 +389,6 @@ button{
   font-weight: bold;
   vertical-align: bottom;
 }
-
 
 .login-btn{
   @extend .pard-btn;
@@ -436,9 +412,6 @@ button{
 .signupButton-eventLogin{
   color: $element-color;
   font-weight: bold;
-/*   width: 6rem;
-  height: 2rem;
- */  
   @include border-radius($element-border-radius);
   background: $blue-pard;
   margin-left: 1rem;
@@ -462,11 +435,6 @@ button{
 
 }
 
-/* .signupButton{
-  margin-bottom: 0.8rem;
-  margin-top:1rem;
-} */
-
 #register-outsider-header-button{
   color: $element-color;
   font-weight: bold;
@@ -478,7 +446,6 @@ button{
   top: 0.2rem;
   right: -5rem;
 }
-
 
 .signupButton-container-Outsider{
   width: $pard-aside-width;
@@ -553,16 +520,6 @@ button{
   height: 50px;
 }
 
-
-.callButtonArtist-sendOther{
-  @include breakpoint(large){
-    position: absolute;
-    top: -2.4rem;
-    right: 0.75rem;    
-  }
-  font-size: $almostNormalSize;
-}
-
 .add-multimedia-input-button, .add-multimedia-input-button-delete{
   position: relative;
   top: 0.4rem;
@@ -585,24 +542,6 @@ button{
   font-size:$smallSize;
 }
 
-.links-accepted-container{
-  position:relative;
-  width: 100%;
-  margin-top: -1rem;
-  padding-bottom: 0.9rem;
-  @include breakpoint(small down){
-    margin-top: -0.5rem;
-  }
-}
-
-
-.add-multimedia-input-field{
-  width: -moz-calc(100% - 2rem);
-  width: -webkit-calc(100% - 2rem);
-  width: calc(100% - 2rem);
-  display: inline-block;
-}
-
 .manage-multimedia-btn{
   @include breakpoint(large){
     position: absolute;
@@ -614,7 +553,6 @@ button{
     margin-top: $inner-spacing;
     margin-left: $inner-spacing;
   }
-
 }
 
 .send-post-data-btn{
@@ -631,13 +569,11 @@ button{
   margin-right: 1rem;
 }
 
-
 .yes-no-button-container{
   width: 100%;
   min-height: 1.6rem;
   position:relative;
 }
-
 
 .browse-btn{
   @extend .pard-btn;
@@ -649,13 +585,6 @@ button{
   margin-bottom: 1rem;
 }
 
-.multimedia-manager-photos-container{
-  margin-bottom: 1.5rem;
-  .browse-btn{
-    margin-bottom: 1.3rem;
-  }
-}
-
 .createOwnprofile-btn-icon{
   font-size: 1.5rem;
 }
@@ -664,7 +593,6 @@ button{
   font-size: .9rem;
   margin-left: -.3rem;
 }
-
 
 .create-space-proposal-call-page-btn, .create-artist-proposal-call-page-btn{
   cursor: pointer;
@@ -718,7 +646,6 @@ button{
 }
 
 .submit-program-btn-call-manager{
-  /* padding: 0px 8px; */
   vertical-align: middle;
   height: 22px;
   width: 35px;
@@ -731,31 +658,8 @@ button{
   }
   
 }
-/* 
-.out-of-program-btn {
-    right: 8px;
-    position: absolute;
-    font-size: 12px;
-    padding: 0.3rem;
-    top: 11rem;
-} */
-
-
-
-.button-activated-event-page{
-  color: red;
-}
-
-/* .interaction-btn-event-page{
-  width: 30%;
-  display: inline-block;
-  border: solid black;
-  background: white;
-  height: 2rem;
-} */
 
 .interaction-btn-event-page{
-  /* width: 29.6%; */
   width: 30%;
   display: inline-block;
   border: 2px solid #fff;
@@ -763,7 +667,6 @@ button{
   height: 2rem;
   color: white;
   font-weight: bold;
-  /* margin-left: 2px; */
 }
 
 .disabled-button{
@@ -788,22 +691,17 @@ button{
 .goUpBtn-program-event-page{
   bottom: 2rem;
   font-size: 1.5rem;
-  /* @include horizontal-center; */
   position: absolute;
   right: 15%;
   z-index: 999;
   color: rgba(0,0,0,0.5);
 }
 
-
-
-
 .OK-btn-reorderSpace-popup{
   font-size: $almostNormalSize;
   position: absolute;
   right: 0;
 }
-
 
 a.toEventPageBtn-profile-page{
   @extend .pard-btn;
@@ -819,7 +717,6 @@ a.toEventPageBtn-profile-page{
     margin-bottom: 1rem;
   }
 }
-
 
 a.toEventPageBtn-event-info-card{
   @extend .pard-btn;
@@ -883,46 +780,46 @@ Profile Card
   outline:none;
   background: white;
   @include border-radius($element-border-radius);
-	position:relative;
+  position:relative;
   margin:0 auto;
   
   @include breakpoint(medium){
-  	width: 11rem;
-  	height: 14.25rem;
+    width: 11rem;
+    height: 14.25rem;
     padding: 3px;
   }
-	
+  
   @include breakpoint(small down) {
     width: 31vw;
     height: 39vw;
     padding: 1px;
-  	.circleProfile {
-			height:6vw;
-			width: 6vw;
-		}
-		.position-circleProfile-card{
-			margin-top: -3.5vw;		
-		}
+    .circleProfile {
+      height:6vw;
+      width: 6vw;
+    }
+    .position-circleProfile-card{
+      margin-top: -3.5vw;   
+    }
     .photo-container-card{
       height: 10vw;
       width: 27.3vw;
     }
-		.name-profileCard{
-			margin-top: 5.3vw;
-			font-size: 2.7vw;
+    .name-profileCard{
+      margin-top: 5.3vw;
+      font-size: 2.7vw;
       line-height:3.2vw;
       height: 10vw;
-		}
-		.locality-profileCard{
-			margin-top: 2.3vw;
-			font-size: 2.2vw;
-			padding-bottom: 2.7vw;
-		}
-		.category-profileCard{
-			font-size: 2.2vw;
-			margin-top: 3.5vw; 
-		}
-	}
+    }
+    .locality-profileCard{
+      margin-top: 2.3vw;
+      font-size: 2.2vw;
+      padding-bottom: 2.7vw;
+    }
+    .category-profileCard{
+      font-size: 2.2vw;
+      margin-top: 3.5vw; 
+    }
+  }
 }
 
 .profileCard:hover, .profileCard:focus {
@@ -935,7 +832,7 @@ Profile Card
 
 .position-profileCard-login{
   position:relative;
-	margin-top:0.9rem;
+  margin-top:0.9rem;
   margin-bottom: 1rem; 
   @include breakpoint(small down) {
   position:relative;
@@ -975,13 +872,13 @@ Profile Card
 }
 
 .position-circleProfile-card {
-	margin-top:-1.15rem;
-	@include horizontal-center;
+  margin-top:-1.15rem;
+  @include horizontal-center;
 
 }
 
 .icon-profileCircle .material-icons{
-	@include absolute-center;
+  @include absolute-center;
   font-size: 1.7rem;
 }
 
@@ -991,33 +888,33 @@ Profile Card
     padding-right:1px;
   }
   color: black;
-	margin-top: 2.1rem;
-	text-align:center;
-	width:100%;
+  margin-top: 2.1rem;
+  text-align:center;
+  width:100%;
   line-height: 1.3rem;
   height: 2.5rem;
   display: block;
 }
 
 .locality-profileCard{
-	width:100%;
-	display:block;
-	text-align:center;
-	color:$text-color;
-	margin-top:1.6rem;
-	border-bottom: 1px solid $text-color;
-	padding-bottom: 1rem;
+  width:100%;
+  display:block;
+  text-align:center;
+  color:$text-color;
+  margin-top:1.6rem;
+  border-bottom: 1px solid $text-color;
+  padding-bottom: 1rem;
   font-size: $almostNormalSize;
 }
 
 
 .category-profileCard{
-	width: 100%;
-	color: $text-color;
-	font-size: $smallSize;
-	text-align: center;	
-	display:block;
-	margin-top:1.4rem;
+  width: 100%;
+  color: $text-color;
+  font-size: $smallSize;
+  text-align: center; 
+  display:block;
+  margin-top:1.4rem;
 }
 
 
@@ -1127,7 +1024,6 @@ a.footer-text-link:hover{
   background-image: url(<%= image_path 'english_flag.png' %>);
 }
 
-
 .title-project-info{
   text-align: center;
   margin-bottom: 2rem;
@@ -1153,12 +1049,9 @@ a.footer-text-link:hover{
   margin-bottom: 1.5rem;
 }
 
-
-
 .orfheo-web-popup{
   text-align: center;  
   margin-bottom: 4rem;
-
 }
 
 .orfheo-baseline-popup{
@@ -1230,67 +1123,20 @@ select:-moz-focusring { color: transparent;
   margin-bottom: -0.5rem;
 }
 
-.popup-form .color-input{
-  height: 2.5rem;
-}
-
-.webTitle-input{
-  margin-bottom: 0.5rem;
-}
-
 .photo-form{
   margin-bottom: 1rem;
   margin-left:1rem;
 }
 
 .message-form{
-    margin-bottom: 1.5rem;
+  margin-bottom: 1.5rem;
 }
 
 .init-message-form{
   margin-bottom: 2rem;
 }
 
-.final-message-form{
-  margin-top: 2.5rem;
-  margin-bottom: 2rem;
-  color: red;
-}
-
-.final-message-form-modifyProduction{
-  margin-bottom: 2rem;
-  margin-top: 0.5rem;
-  color: red;
-}
-
-.title-part{
-  @include breakpoint(large){
-    margin-top: 1.5rem;
-    margin-bottom: 3.5rem;
-  }
-  @include breakpoint(small down){
-    margin-top: 0.5rem;
-    margin-bottom: 2rem;
-  }
-}
-
-
-select.category-input{
-  font-size: 14px;
-  height: auto;
-  margin-bottom:1.5rem;
-  outline: none;
-}
-
-.photos-modifyProduction{
-  margin-bottom: 1rem;
-}
-
 /*LARGE*/
-
-.profile-form-field{
-    margin: 2rem 0;
-}
 
 .geocod-container-adrees-imput{
   display: inline-block;
@@ -1309,33 +1155,19 @@ select.category-input{
   }
 }
 
-
 .call-form-field{
   margin: 2rem 0;
 }
 
 @media only screen and #{breakpoint(large)} {
 
-  .components-input{
-      width: 5rem; 
-  }
-
-  .duration-input{
-    width: 6rem;
-    margin-left: 1rem !important;
-  }
-
-  .category-input{
-    width: 12rem;
-  }
-
-  .locality-ArtistForm, .locality-modifyProfile{
+  .locality-ArtistForm{
     width: 17rem;
     display: inline-block;
     margin-right: 3rem;   
   }
 
-  .postal_code-ArtistForm, .postal_code-modifyProfile{
+  .postal_code-ArtistForm{
     width: 13rem;
     display: inline-block;  
   }
@@ -1349,7 +1181,7 @@ select.category-input{
   .popup-form .postal_code-addressForm {
     font-size: $smallSize;
     display: inline-block; 
-}
+  }
 
   .popup-form .route-addressForm{
     width: 17rem;
@@ -1378,24 +1210,13 @@ select.category-input{
     margin-left:1rem;
   }
 
-  .category-SpaceForm, .category-modifyProfile{
-    margin-top: 2.5rem;
-  }
-
-  .category-modifyProfile.field-modifyProduction{
-    margin-bottom: 0;
-  }
-
-  .name-SpaceForm, .address-SpaceForm, .personal_web-SpaceForm, .links-SpaceForm{
-    margin-bottom: 1.5rem;
-  }
-
   .modifyProfilePopup .name-FormDiv{
     @include breakpoint (large){
       width: 17rem;
       display: inline-block;
       vertical-align: top;
       margin-top:1rem;
+      margin-bottom: 0;
     }
   }
 
@@ -1405,6 +1226,7 @@ select.category-input{
       display: inline-block;
       vertical-align: top;
       margin-top:2rem;
+      margin-bottom: 0;
     }
   }
 
@@ -1426,27 +1248,6 @@ select.category-input{
     }
   }
 
-  .color-SpaceForm{
-    margin-bottom: 1.8rem;
-  }
-
-
-  .own-SpaceCall, .un_wanted-SpaceCall, .sharing-SpaceCall, .conditions-SpaceCall{
-    margin-bottom: 1.5rem;
-  }
-
-  .components-input, .category-input{
-    display: inline-block;
-    margin-left: 1.5rem !important;
-  }
-
-
-  .duration-ArtistCall, .duration-modifyProduction{
-    display: inline-block;
-    margin-top: 1rem;
-    margin-bottom: -0.5rem;
-  }
-
   .m-artistCall{
     font-size: 14px;
     float: right;
@@ -1459,42 +1260,6 @@ select.category-input{
     position: relative;
     margin: 1rem 0 0 0;
   }
-  
-  .t-artistCall{
-    border-bottom: 1px solid;
-  }  
-
-  .profilePhoto-modifyProfile{
-    display: inline-block;
-    margin-left: 4rem;
-    position: relative;
-    margin-top: 0.4rem;  
-  }
-
-  .name-modifyProfile{
-    width: 17rem;
-    display: inline-block;  
-    margin-top: 1rem;    
-    vertical-align: top;
-  }
-
-  .color-modifyProfile{
-    margin-top: 2rem;
-  }
-
-  .address-modifyProfile{
-    margin-top: -0.5rem;
-  }
-
-
-
-  .artist-modifyProfile .bio-modifyProfile, .bio-ArtistForm {
-    margin-top: -0.5rem;
-  }
-
-  .bio-ArtistForm {
-    margin-top: 0rem;
-  }
 
 }
 
@@ -1504,12 +1269,9 @@ select.category-input{
   }
 }
 
-
-
 .MultipleSelector-FormField select, .MultipleDaysSelector-FormField select{
   width: 100% !important;
   outline: none !important;
-
 }
 
 .MultipleSelector-FormField .ms-choice, .MultipleDaysSelector-FormField .ms-choice{
@@ -1529,26 +1291,8 @@ select.category-input{
     width: 100% !important;
 }
 
-
-
 .deleteProfile-caller{
   font-size: $smallSize;
-}
-
-.field-ArtistCall, .field-modifyProduction{
-  margin-bottom: 1.5rem;
-}
-
-.field-modifyProduction{
-  margin-bottom: 2rem;
-}
-
-.title-ArtistCall{
-  margin-bottom: 2rem;
-}
-
-.links-ArtistCall{
-  margin-top: 1.5rem;
 }
 
 
@@ -1681,7 +1425,6 @@ SEARCH // SELECT2
   display: none !important;
 }
 
-
 .select2-container {
   max-width: 100%;
   min-width:100%;
@@ -1691,13 +1434,9 @@ SEARCH // SELECT2
   border-radius: $element-border-radius;
 }
 
-
-
 .select2-selection.select2-selection--multiple{
   font-size: 1rem;
-  min-height: 2.6rem;
-  
- 
+  min-height: 2.6rem; 
 }
 
 
@@ -1709,7 +1448,6 @@ SEARCH // SELECT2
 .select2-selection__rendered li{
   padding-top: 5px;
 }
-
 
 .search-input{
   @include breakpoint(large){ 
@@ -1736,12 +1474,6 @@ span.select2-container--default .select2-selection--single{
   height: 2.1rem;
 }
 
-
-/* .select2-container--default .select2-results__option--highlighted[aria-selected]{
-  color:  black !important;
-  background-color: $grey-1 !important;
-}
- */
 
 /*===============================================
 COLOR PICKER
@@ -1804,7 +1536,6 @@ IMAGES
 
 }
 
-
 .logo-header{
   cursor: pointer;
   background-image: url(<%= image_path 'orfheologocolor.png' %>);
@@ -1819,7 +1550,6 @@ IMAGES
     margin-bottom:0.7rem;
   }
 }
-
 
 .orfheo-logo-card{
   background-image: url(<%= image_path 'orfheologocolor.png' %>);
@@ -1836,9 +1566,6 @@ IMAGES
   }
 }
 
-
-
-
 table.dataTable thead .sorting_asc {
     background-image: url(<%= image_path 'sort_asc.png' %>);
 }
@@ -1848,7 +1575,6 @@ table.dataTable thead .sorting_desc {
 table.dataTable thead .sorting {
     background-image: url(<%= image_path 'sort_both.png' %>);
 }
-
 
 .cursor_grab{
   cursor: -webkit-grab !important;; 
@@ -1860,8 +1586,6 @@ table.dataTable thead .sorting {
   cursor: move !important;
 }
 
-
-
 .position-fixed{
   position: fixed !important;
 }
@@ -1869,17 +1593,6 @@ table.dataTable thead .sorting {
 /*====================================== 
 TOOLTIP 
 ========================================*/
-
-/* .orfheo-tooltip{
-  @include border-radius($element-border-radius);
-}
-
-.orfheo-tooltip-content{
-  background: black;
-  color:  white;
-  font-size: $smallSize;
-}
- */
 
 .orfheo-tooltip{
   @include border-radius($element-border-radius);
