create own proposals buttons well positionated

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -1852,6 +1852,10 @@ p.initial-text-proposalPanel{
   left: 24rem;
 }
 
+.createProposalsContainer-call-page{
+  position: relative;
+}
+
  
 /*---------------------------
 Program Manager Tab
