modify, add and delete ownArtist behave correctly

--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -110,6 +110,10 @@ a.profileCard:hover{
   outline: 1px solid red;
 }
 
+.text-warning{
+  color: red;
+}
+
 
 /*===============================================
 GENERAL LAYOUT
