--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -766,6 +766,15 @@ a.navigation-btn-callPage{
   font-size: $almostNormalSize;
 }
 
+.cancelBtn-modifyProposalForm{
+  position: absolute;
+  bottom: 1.5rem;
+  right: 7.5rem;
+  padding: 0.4rem 1.2rem;
+  font-size: 0.875rem;
+}
+
+
 /*===============================================
 COMPONENTS
 ================================================*/
