improvments in programTable speed when modify and create permanent show

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -2140,7 +2140,7 @@ Program Manager Tab
 
 /* TABLA PROGRAMA GENERAL CALL-PAGE */
 
-.column-participant_category, .column-host_category{
+.column-participant_subcategory, .column-host_subcategory{
   min-width: 6.5rem !important;
   width: 6.5rem !important;
 }
