deleteArtist/Space and modifyArtist/Space defined for programTable

--- a/assets/stylesheets/scss/_pages.erb.scss
+++ b/assets/stylesheets/scss/_pages.erb.scss
@@ -983,7 +983,7 @@ Profile Section
     height: 1rem;
     vertical-align: top;
     a{
-      vertical-align: top;
+      vertical-align: 6px;
     }
     .trash-icon-delete{
       /* vertical-align: -0.1rem; */
