--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -815,11 +815,12 @@ Profile Card
   @include border-radius($element-border-radius);
   position:relative;
   margin:0 auto;
-  
+  font-size: 12px;
+
   @include breakpoint(medium){
-    width: 11rem;
+    width: 174px;
     height: 14.25rem;
-    padding: 3px;
+    /* padding: 3px; */
   }
   
   @include breakpoint(small down) {
@@ -860,7 +861,7 @@ Profile Card
 } 
 
 .profileCard{
-  border: 3px solid;
+  border: 2px solid;
 }
 
 .position-profileCard-login{
@@ -894,14 +895,14 @@ Profile Card
 
 .photo-container-card{
   display: block;
-  width: 10.25rem;
-  height: 3.75rem;
+  width: 170px;
+  height: 6.8rem;
   margin:0 auto;
-  background:red;
+  /* background:red; */
 }
 
 .circleProfile{
-  @include pardCircle(2.2rem);
+  @include pardCircle(2rem);
 }
 
 .position-circleProfile-card {
@@ -912,20 +913,22 @@ Profile Card
 
 .icon-profileCircle .material-icons{
   @include absolute-center;
-  font-size: 1.7rem;
+  font-size: 1.5rem;
 }
 
 .name-profileCard{
+  font-weight: bold;
+  padding: 0 3px;
   @include breakpoint(medium){
     padding-left: 1px;
     padding-right:1px;
   }
   color: black;
-  margin-top: 2.1rem;
+  margin-top: 1.4rem;
   text-align:center;
   width:100%;
-  line-height: 1.3rem;
-  height: 2.5rem;
+  line-height: 1rem;
+  height: 2.1rem;
   display: block;
 }
 
@@ -933,23 +936,27 @@ Profile Card
   width:100%;
   display:block;
   text-align:center;
-  color:$text-color;
-  margin-top:1.6rem;
-  border-bottom: 1px solid $text-color;
-  padding-bottom: 1rem;
-  font-size: $almostNormalSize;
+  color: $grey-4;
+  padding: 14px 3px;
 }
 
 
 .category-profileCard{
   width: 100%;
-  color: $text-color;
-  font-size: $smallSize;
+  color: $grey-4;
   text-align: center; 
   display:block;
-  margin-top:1.4rem;
+  padding: 12px 3px;
+  background-color:$grey-1;
 }
 
+.hline-profileCard{
+  width: 150px;
+  margin: 0;
+  margin-left: 10px;
+  margin-top: 0.4rem;
+  border-color:  $grey-2;
+}
 
 
 /*-----------------
