--- a/assets/stylesheets/scss/_pard.erb.scss
+++ b/assets/stylesheets/scss/_pard.erb.scss
@@ -828,30 +828,24 @@ Profile Card
     height: 39vw;
     padding: 1px;
     .circleProfile {
-      height:6vw;
-      width: 6vw;
-    }
-    .position-circleProfile-card{
-      margin-top: -3.5vw;   
-    }
-    .photo-container-card{
-      height: 10vw;
-      width: 27.3vw;
+      height:5vw;
+      width: 5vw;
+      .material-icons{
+        font-size: 4vw;
+      }
     }
     .name-profileCard{
-      margin-top: 5.3vw;
-      font-size: 2.7vw;
-      line-height:3.2vw;
-      height: 10vw;
+      font-size: 2.3vw;
+      line-height: 2.5vw;
     }
     .locality-profileCard{
-      margin-top: 2.3vw;
       font-size: 2.2vw;
-      padding-bottom: 2.7vw;
     }
     .category-profileCard{
       font-size: 2.2vw;
-      margin-top: 3.5vw; 
+    }
+    .hline-profileCard{
+      margin-top: 2.5% !important;
     }
   }
 }
@@ -894,11 +888,11 @@ Profile Card
 }
 
 .photo-container-card{
+  text-align: center;
   display: block;
-  width: 170px;
-  height: 6.8rem;
-  margin:0 auto;
-  /* background:red; */
+  height: 48.5%;
+  width: 100%;
+  margin: 0 auto;
 }
 
 .circleProfile{
@@ -906,7 +900,7 @@ Profile Card
 }
 
 .position-circleProfile-card {
-  margin-top:-1.15rem;
+  margin-top:-10%;
   @include horizontal-center;
 
 }
@@ -924,11 +918,11 @@ Profile Card
     padding-right:1px;
   }
   color: black;
-  margin-top: 1.4rem;
+  margin-top: 13%;
   text-align:center;
   width:100%;
   line-height: 1rem;
-  height: 2.1rem;
+  height: 15%;
   display: block;
 }
 
@@ -937,7 +931,7 @@ Profile Card
   display:block;
   text-align:center;
   color: $grey-4;
-  padding: 14px 3px;
+  padding: 8.3% 3px;
 }
 
 
@@ -946,7 +940,7 @@ Profile Card
   color: $grey-4;
   text-align: center; 
   display:block;
-  padding: 12px 3px;
+  padding: 7% 3px;
   background-color:$grey-1;
 }
 
@@ -954,8 +948,12 @@ Profile Card
   width: 150px;
   margin: 0;
   margin-left: 10px;
-  margin-top: 0.4rem;
+  margin-top: 4% !important;
   border-color:  $grey-2;
+  @include breakpoint(medium down){
+    width: 100%;
+    margin: 0;
+  }
 }
 
 
